--- a/i18n/ja_JP.yaml
+++ b/i18n/ja_JP.yaml
@@ -1340,7 +1340,7 @@ ui:
       msg:
         empty: Email cannot be empty.
         incorrect: Email incorrect format.
-    ready_title: Your Answer is ready!
+    ready_title: Your site is ready
     ready_desc: >-
       If you ever feel like changing more settings, visit <1>admin section</1>; find it in the site menu.
     good_luck: "Have fun, and good luck!"
@@ -1401,7 +1401,7 @@ ui:
       title: 管理者
     dashboard:
       title: ダッシュボード
-      welcome: Welcome to Answer Admin!
+      welcome: Welcome to Admin!
       site_statistics: Site statistics
       questions: "質問："
       answers: "回答："
