--- a/i18n/pt_BR.yaml
+++ b/i18n/pt_BR.yaml
@@ -1017,7 +1017,7 @@ ui:
       title: Administrador
     dashboard:
       title: Painel
-      welcome: Bem vindo ao Answer Administrador!
+      welcome: Bem vindo ao Administrador!
       site_statistics: Estatísticas do Site
       questions: "Perguntas:"
       answers: "Respostas:"
