--- a/i18n/ru_RU.yaml
+++ b/i18n/ru_RU.yaml
@@ -1340,7 +1340,7 @@ ui:
       msg:
         empty: Адрес электронной почты не может быть пустым.
         incorrect: Недопустимый формат e-mail адреса.
-    ready_title: Ваш ответ готов!
+    ready_title: Вашият сайт е готов
     ready_desc: >-
       Если вам когда-нибудь захочется изменить дополнительные настройки, посетите <1>раздел администратора</1>; найдите его в меню сайта.
     good_luck: "Получайте удовольствие и удачи!"
@@ -1401,7 +1401,7 @@ ui:
       title: Администратор
     dashboard:
       title: Панель управления
-      welcome: Добро пожаловать в Answer Admin!
+      welcome: Добро пожаловать в Admin!
       site_statistics: Статистика сайта
       questions: "Вопросы:"
       answers: "Ответы:"
