--- a/i18n/id_ID.yaml
+++ b/i18n/id_ID.yaml
@@ -1340,7 +1340,7 @@ ui:
       msg:
         empty: Email cannot be empty.
         incorrect: Email incorrect format.
-    ready_title: Your Answer is ready!
+    ready_title: Your site is ready
     ready_desc: >-
       If you ever feel like changing more settings, visit <1>admin section</1>; find it in the site menu.
     good_luck: "Have fun, and good luck!"
@@ -1401,7 +1401,7 @@ ui:
       title: Admin
     dashboard:
       title: Dasbor
-      welcome: Selamat datang di Answer Admin!
+      welcome: Selamat datang di Admin!
       site_statistics: Site statistics
       questions: "Pertanyaan:"
       answers: "Jawaban:"
