--- a/i18n/pl_PL.yaml
+++ b/i18n/pl_PL.yaml
@@ -1340,7 +1340,7 @@ ui:
       msg:
         empty: Adres e-mail nie może być pusty.
         incorrect: Niepoprawny format adresu e-mail.
-    ready_title: Twój Answer jest już zainstalowany!
+    ready_title: Twoja witryna jest gotowa
     ready_desc: >-
       Jeśli kiedykolwiek zechcesz zmienić więcej ustawień, odwiedź <1>sekcję administratora</1>; znajdziesz ją w menu strony.
     good_luck: "Baw się dobrze i powodzenia!"
@@ -1401,7 +1401,7 @@ ui:
       title: Administrator
     dashboard:
       title: Panel
-      welcome: Witamy w Answer Admin!
+      welcome: Witamy w Admin!
       site_statistics: Statystyki witryny
       questions: "Pytania:"
       answers: "Odpowiedzi:"
