--- a/i18n/uk_UA.yaml
+++ b/i18n/uk_UA.yaml
@@ -1340,7 +1340,7 @@ ui:
       msg:
         empty: Поле електронної пошти не може бути пустим.
         incorrect: Email incorrect format.
-    ready_title: Ваша відповідь готова!
+    ready_title: Ваш сайт готовий
     ready_desc: >-
       If you ever feel like changing more settings, visit <1>admin section</1>; find it in the site menu.
     good_luck: "Веселіться, і хай щастить!"
@@ -1401,7 +1401,7 @@ ui:
       title: Admin
     dashboard:
       title: Dashboard
-      welcome: Welcome to Answer Admin!
+      welcome: Welcome to Admin!
       site_statistics: Site statistics
       questions: "Запитання:"
       answers: "Відповіді:"
