--- a/i18n/pt_PT.yaml
+++ b/i18n/pt_PT.yaml
@@ -1734,7 +1734,7 @@ ui:
         text: "WARNING: If turn off, you may be unable to log in if you have not previously configured other login method."
     installed_plugins:
       title: Extensões instaladas
-      plugin_link: Extensões estendem e expandem a funcionalidade da Resposta. Você pode encontrar extensões no <1>Repositório de extensões do Answer</1>.
+      plugin_link: Os plug-ins estendem e expandem a funcionalidade. Você pode encontrar plug-ins no <1>Repositório de plug-ins</1>.
       filter:
         all: Todos
         active: Ativo
