--- a/i18n/ru_RU.yaml
+++ b/i18n/ru_RU.yaml
@@ -1734,7 +1734,7 @@ ui:
         text: "Предупреждение: При отключении, вы не сможете войти, если ранее не настроили другой способ входа."
     installed_plugins:
       title: Установленные плагины
-      plugin_link: Плагины расширяют функциональность Answer. Вы можете найти плагины в <1>Answer Plugin Repository</1>.
+      plugin_link: Плагины расширяют и расширяют функциональность. Вы можете найти плагины в <1> репозитории плагинов</1>.
       filter:
         all: Все
         active: Активные
