--- a/i18n/sv_SE.yaml
+++ b/i18n/sv_SE.yaml
@@ -1734,7 +1734,7 @@ ui:
         text: "WARNING: If turn off, you may be unable to log in if you have not previously configured other login method."
     installed_plugins:
       title: Installed Plugins
-      plugin_link: Plugins extend and expand the functionality of Answer. You may find plugins in the <1>Answer Plugin Repository</1>.
+      plugin_link: Plugins extend and expand the functionality. You may find plugins in the <1> Plugin Repository</1>.
       filter:
         all: Alla
         active: Aktiv
