--- a/i18n/sv_SE.yaml
+++ b/i18n/sv_SE.yaml
@@ -1265,7 +1265,7 @@ ui:
     x_answers: answers
     x_questions: questions
   install:
-    title: Answer
+    title: Installation
     next: Nästa
     done: Klar
     config_yaml_error: Can't create the config.yaml file.
