--- a/i18n/pt_PT.yaml
+++ b/i18n/pt_PT.yaml
@@ -1265,7 +1265,7 @@ ui:
     x_answers: respostas
     x_questions: perguntas
   install:
-    title: Resposta
+    title: Instalação
     next: Proximo
     done: Completo
     config_yaml_error: Não é possível criar o arquivo config.yaml.
