--- a/i18n/zh_CN.yaml
+++ b/i18n/zh_CN.yaml
@@ -1275,7 +1275,7 @@ ui:
     x_answers: 个回答
     x_questions: 个问题
   install:
-    title: 回答
+    title: 安装
     next: 下一步
     done: 完成
     config_yaml_error: 无法创建 config.yaml 文件。
