--- a/i18n/zh_TW.yaml
+++ b/i18n/zh_TW.yaml
@@ -1265,7 +1265,7 @@ ui:
     x_answers: 個回答
     x_questions: 個問題
   install:
-    title: 回答
+    title: 安装
     next: 下一步
     done: 完成
     config_yaml_error: 無法建立 config.yaml 檔。
