--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -781,6 +781,10 @@ ui:
     heart: heart
     smile: smile
     frown: frown
+    btn_label: add or remove reactions
+    undo_emoji: undo {{ emoji }} reaction
+    react_emoji: react with {{ emoji }}
+    unreact_emoji: unreact with {{ emoji }}
   comment:
     btn_add_comment: Add comment
     reply_to: Reply to
