--- a/i18n/bn_BD.yaml
+++ b/i18n/bn_BD.yaml
@@ -612,7 +612,8 @@ ui:
       label: Name
       msg:
         empty: Name cannot be empty.
-        range: Name up to 30 characters.
+        range: Name must between 4 to 30 characters in length.
+        character: 'Must use the character set "a-z", "A-Z", "0-9", " - . _"'
     email:
       label: Email
       msg:
