feat(hot): change frequent to hot

--- a/i18n/de_DE.yaml
+++ b/i18n/de_DE.yaml
@@ -1249,7 +1249,7 @@ ui:
     answers: Antworten
     newest: Neueste
     active: Aktiv
-    frequent: Häufig
+    hot: Hot
     score: Punktzahl
     unanswered: Unbeantwortet
     modified: geändert
