--- a/i18n/fa_IR.yaml
+++ b/i18n/fa_IR.yaml
@@ -1249,7 +1249,7 @@ ui:
     answers: پاسخ ها
     newest: جدیدترین
     active: فعال
-    frequent: پرتکرار
+    hot: Hot
     score: امتیاز
     unanswered: بدون پاسخ
     modified: تغییر یافته
