--- a/i18n/it_IT.yaml
+++ b/i18n/it_IT.yaml
@@ -1249,7 +1249,7 @@ ui:
     answers: Risposte
     newest: Più recenti
     active: Attivo
-    frequent: Frequenti
+    hot: Hot
     score: Punteggio
     unanswered: Senza risposta
     modified: Modificato
