--- a/i18n/pl_PL.yaml
+++ b/i18n/pl_PL.yaml
@@ -1249,7 +1249,7 @@ ui:
     answers: Odpowiedzi
     newest: Najnowsze
     active: Aktywne
-    frequent: Częste
+    hot: Hot
     score: Ocena
     unanswered: Bez odpowiedzi
     modified: zmodyfikowane
