--- a/i18n/ro_RO.yaml
+++ b/i18n/ro_RO.yaml
@@ -1249,7 +1249,7 @@ ui:
     answers: Răspunsuri
     newest: Cele mai noi
     active: Activ
-    frequent: Frecvent
+    hot: Hot
     score: Scor
     unanswered: Fără răspuns
     modified: modificat
