--- a/i18n/sk_SK.yaml
+++ b/i18n/sk_SK.yaml
@@ -1249,7 +1249,7 @@ ui:
     answers: Odpovede
     newest: Najnovšie
     active: Aktívne
-    frequent: Časté
+    hot: Hot
     score: Skóre
     unanswered: Nezodpovedané
     modified: upravené
