--- a/i18n/zh_TW.yaml
+++ b/i18n/zh_TW.yaml
@@ -1249,7 +1249,7 @@ ui:
     answers: 回答
     newest: 最新的
     active: 活躍的
-    frequent: 瀏覽量
+    hot: 熱門
     score: 評分
     unanswered: 未回答
     modified: 修改於
