--- a/i18n/pt_BR.yaml
+++ b/i18n/pt_BR.yaml
@@ -855,7 +855,7 @@ ui:
     answers: Respostas
     newest: Mais recente
     active: Ativo
-    frequent: Frequente
+    hot: Hot
     score: Pontuação
     unanswered: Não Respondido
     modified: modificado
