fix: replace quetion list sort requent -> hot

--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1290,7 +1290,7 @@ ui:
     answers: Answers
     newest: Newest
     active: Active
-    frequent: Frequent
+    hot: Hot
     score: Score
     unanswered: Unanswered
     modified: modified
