feat: Support admin edit display name
feat: Support admin edit display name

--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1548,6 +1548,9 @@ ui:
       title: Edit profile
       form:
         fields:
+          display_name:
+            label: Display name
+            msg_range: Display name up to 30 characters.
           username:
             label: Username
             msg_range: Username up to 30 characters.
