--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1265,9 +1265,8 @@ ui:
   account_result:
     success: Your new account is confirmed; you will be redirected to the home page.
     link: Continue to homepage
-    invalid: >-
-      Sorry, this account confirmation link is no longer valid. Perhaps your
-      account is already active?
+    oops: Oops!
+    invalid: The link you used no longer works.
     confirm_new_email: Your email has been updated.
     confirm_new_email_invalid: >-
       Sorry, this confirmation link is no longer valid. Perhaps your email was
